# batch-subtitles-renamer

./: .gitignore  MODULE.bazel  README.md  linter.sh  main.py  setup.py
src/: BUILD.bazel  file_type_detector.py  renamer.py  utils.py
tests/: BUILD.bazel  test_file_type_detector.py  test_renamer.py  test_utils.py
tests/testdata/matched_subs_and_vids/: subtitle_01.ass  subtitle_01.srt  subtitle_02.ass  subtitle_03.ass  subtitle_04.ass  subtitle_05.ass  subtitle_06.ass  subtitle_07.ass  subtitle_08.ass  subtitle_09.ass  subtitle_10.ass  subtitle_11.ass  subtitle_12.ass  video_01.mkv  video_02.mkv  video_03.mkv  video_04.mkv  video_05.mkv  video_06.mkv  video_07.mkv  video_08.mkv  video_09.mkv  video_10.mkv  video_11.mkv  video_12.mkv
wix/: Installer.wxs  SubtitlesRenamer.wxs  Variables.wxi  Version.wxi
